level 1 changes